# UniversalConverterEnginePro

./: .gitignore  README.md  gradle.properties  gradlew  gradlew.bat  settings.gradle
.github/workflows/: android-build.yml
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  compression_engine.cpp  converter_engine.cpp  converter_engine.h  file_detector.cpp  hash_engine.cpp  image_processor.cpp  image_upscaler.cpp  smart_compress.cpp  thread_pool.cpp
app/src/main/java/com/universalconverter/pro/: ConverterApplication.kt  MainActivity.kt  SplashActivity.kt
app/src/main/java/com/universalconverter/pro/database/: ConversionHistoryEntity.kt
app/src/main/java/com/universalconverter/pro/engine/: ConversionJob.kt  ConversionQueue.kt  FileDetector.kt  GifEncoder.kt  ImageConverter.kt  MediaConverter.kt  NativeEngine.kt  PdfConverter.kt  SmartCompressor.kt  TempFileManager.kt
app/src/main/java/com/universalconverter/pro/engine/privacy/: MetadataNuker.kt  PrivacyScanner.kt
app/src/main/java/com/universalconverter/pro/premium/: PremiumActivity.kt  PremiumManager.kt
app/src/main/java/com/universalconverter/pro/ui/cloud/: CloudActivity.kt
app/src/main/java/com/universalconverter/pro/ui/dashboard/: DashboardFragment.kt
app/src/main/java/com/universalconverter/pro/ui/document/: DocumentFragment.kt
app/src/main/java/com/universalconverter/pro/ui/image/: ImageConverterFragment.kt  ImageFragment.kt  ImageViewModel.kt
app/src/main/java/com/universalconverter/pro/ui/media/: MediaConverterFragment.kt  MediaFragment.kt
app/src/main/java/com/universalconverter/pro/ui/pdf/: PdfConverterFragment.kt
app/src/main/java/com/universalconverter/pro/ui/threed/: ThreeDFragment.kt
app/src/main/java/com/universalconverter/pro/ui/tools/: ToolsFragment.kt
app/src/main/java/com/universalconverter/pro/worker/: ConversionWorker.kt
app/src/main/res/drawable/: ic_chart.xml  ic_check_free.xml  ic_check_pro.xml  ic_dashboard.xml  ic_image.xml  ic_launcher_fg.xml  ic_launcher_foreground.xml  ic_media.xml  ic_pdf.xml  ic_star_pro.xml  ic_threed.xml  ic_tools.xml
app/src/main/res/layout/: activity_cloud.xml  activity_main.xml  activity_premium.xml  activity_splash.xml  fragment_dashboard.xml  fragment_document.xml  fragment_image.xml  fragment_media.xml  fragment_pdf.xml  fragment_threed.xml  fragment_tools.xml  item_history.xml  item_premium_feature.xml
app/src/main/res/menu/: bottom_nav.xml  bottom_nav_menu.xml  main_menu.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: arrays.xml  colors.xml  dimens.xml  strings.xml  themes.xml
app/src/main/res/xml/: file_paths.xml
