cmake_minimum_required(VERSION 3.18.1)
project("universalconverter")
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
add_compile_options(-Wno-unused-function -Wno-unused-variable -Wno-unused-private-field -Wno-unused-parameter)
add_library(universalconverter SHARED converter_engine.cpp smart_compress.cpp image_upscaler.cpp hash_engine.cpp)
find_library(log_lib log)
find_library(android_lib android)
find_library(jnigfx_lib jnigraphics)
target_link_libraries(universalconverter ${log_lib} ${android_lib} ${jnigfx_lib})
target_include_directories(universalconverter PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
